crates/claptrap-core/tests/snapshots/tests__basic__all_aliases.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_e53bd7d0'
[1m[4mUsage:[0m [1mctest[0m [OPTIONS] [COMMAND]

[1m[4mCommands:[0m
  [1mrev[0m, [1m-r[0m, [1m--inplace[0m  In place [aliases: -s, -f, -g, --origin, --path, --tryfrom, source, from]
  [1mhelp[0m                Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-d[0m, [1m--destination[0m <FILE>
          The Filepath to save into the result
          
          [aliases: -t, -i, -o, --file, --into, --to]

  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')

  [1m-V[0m, [1m--version[0m
          Print version
EOF_e53bd7d0
exit 0
