crates/claptrap-core/tests/snapshots/tests__basic__cat_cmd_handles_eof_in_message.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "format!(\"{}\", cmd)"
---
command cat <<'EOF_16726ae4'
this contains EOF in the text
EOF
and more
EOF_16726ae4
exit 1
