crates/claptrap-core/tests/snapshots/tests__basic__long_help.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_89694ea0'
[1m[4mUsage:[0m [1mmyapp[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-m[0m, [1m--mode[0m <mode>          
  [1m-p[0m, [1m--protocol[0m <protocol>  
  [1m-h[0m, [1m--help[0m                 Print help
  [1m-V[0m, [1m--version[0m              Print version
EOF_89694ea0
exit 0
