crates/claptrap-core/tests/snapshots/tests__basic__variables.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_mode='stream'
claptrap_protocol='udp'
